--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ footer{
 footer p{
     font-size: 15px;
 }
-/* PROJECT ON CARDS */
+/*  CARTES */
 .cards {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -314,7 +314,7 @@ footer p{
     }
 }
 
-/* Media Queries cards */
+/* Media Queries des cartes */
 @media (max-width: 768px) {
     .cards {
         grid-template-columns: 1fr; /* STACK les cartes */
